cmake_minimum_required(VERSION 3.17)
project(usaco_cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(abc bronze/2020_12/abc.cpp)
add_executable(chains bronze/2020_12/chains.cpp)
add_executable(ruts bronze/2020_12/ruts.cpp)
add_executable(cowsignal bronze/2016_12/cowsignal.cpp)
add_executable(seashell bronze/2019_01/seashell.cpp)
add_executable(balancing bronze/2016_02/balancing.cpp)
add_executable(cbarn bronze/2016_02/cbarn.cpp)
add_executable(haybales silver/2016_12/haybales.cpp)
add_executable(paint bronze/2005_12/paint.cpp)