cmake_minimum_required(VERSION 3.17)
project(usaco_cpp)

set(CMAKE_CXX_STANDARD 17)


add_executable(prob3 dmoj/201-bsspc-2021-junior/prob3.cpp)
add_executable(bsspc21j4 dmoj/201-bsspc-2021-junior/bsspc21j4.cpp)
add_executable(bsspc21j5 dmoj/201-bsspc-2021-junior/bsspc21j5.cpp)
add_executable(dmopc20c7p1 dmoj/200-dmopc-20-june-contest/dmopc20c7p1.cpp)
add_executable(main main.cpp)